--- a/services/media-player.service
+++ b/services/media-player.service
@@ -1,12 +1,15 @@
 [Unit]
+Description=Media player socket for external control
 After=graphical.target
 Requires=graphical.target
 
 [Service]
 Type=exec
 User=msuser
-ExecStart=/bin/sh -c "DISPLAY=:0 mpv --fs --image-display-duration=inf --idle=once --keep-open=yes --input->Restart=on-failure
-RestartSec=10
+ExecStart=/bin/sh -c "DISPLAY=:0 mpv --fs --image-display-duration=inf --idle=once --keep-open=yes --ao=null --input-ipc-server=/tmp/mpv_socket"
+Restart=always
+RestartSec=5
+SyslogIdentifier=media-player
 
 [Install]
 WantedBy=graphical.target
